[gd_scene load_steps=40 format=3 uid="uid://drffed2tq2jus"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_35xu0"]
[ext_resource type="Texture2D" uid="uid://c0ks8cfh46x00" path="res://assets/misc/shadow.png" id="2_vej8t"]
[ext_resource type="Texture2D" uid="uid://b3bnlsrrsgyjn" path="res://assets/sprites/Sprite-run003.png" id="3_rpmrj"]
[ext_resource type="Texture2D" uid="uid://c5cda0inrsbec" path="res://assets/sprites/assasin_run.png" id="4_lg7j1"]
[ext_resource type="Texture2D" uid="uid://dxwsilp1bxe28" path="res://assets/sprites/Sprite-0003.png" id="4_org4s"]
[ext_resource type="PackedScene" uid="uid://f8scmapl2tk6" path="res://scripts/player/navigation/navigation_agent_2d.tscn" id="4_st6it"]
[ext_resource type="Texture2D" uid="uid://bgtddydt6cpmh" path="res://assets/sprites/Spritesheet.png" id="5_7ck1i"]
[ext_resource type="PackedScene" uid="uid://dbvccdfc4s5e1" path="res://game_scenes/input_component.tscn" id="5_vq3vh"]
[ext_resource type="Texture2D" uid="uid://b71n77jnggvq5" path="res://assets/textures/light.png" id="8_07x4o"]
[ext_resource type="PackedScene" uid="uid://m8yvvkr3bf4c" path="res://game_scenes/dash_component.tscn" id="8_f5wbr"]
[ext_resource type="Script" path="res://scripts/systems/cam_shake.cs" id="8_hwydy"]
[ext_resource type="PackedScene" uid="uid://dxiasrjikt47l" path="res://ui/components/hp_bars.tscn" id="9_5hble"]
[ext_resource type="PackedScene" uid="uid://biiqhpu4a8iqn" path="res://game_scenes/ghotst_effect.tscn" id="9_66ca6"]
[ext_resource type="PackedScene" uid="uid://dov5rkbktfcst" path="res://game_scenes/skills/star_court.tscn" id="17_mvh31"]
[ext_resource type="PackedScene" uid="uid://4igtmvdmdtyf" path="res://game_scenes/systems/skills/skill_manager.tscn" id="17_nxdyt"]
[ext_resource type="Script" path="res://core/combat/basic_attack.gd" id="17_wwwbr"]
[ext_resource type="PackedScene" uid="uid://c364u20x2uojc" path="res://game_scenes/projectile.tscn" id="18_myu4g"]
[ext_resource type="Script" path="res://scripts/systems/direction_tracker.gd" id="19_6k20i"]
[ext_resource type="Script" path="res://scripts/player/StateMachine/state_machine_manager.gd" id="20_rpnuu"]
[ext_resource type="Script" path="res://scripts/player/StateMachine/state.gd" id="21_xtvo4"]
[ext_resource type="Script" path="res://scripts/player/StateMachine/idle.gd" id="22_ejng3"]
[ext_resource type="Script" path="res://scripts/player/StateMachine/run.gd" id="23_ffcry"]
[ext_resource type="Script" path="res://game_scenes/dash_state.gd" id="24_yj4fb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3yqhx"]
radius = 15.0
height = 42.0

[sub_resource type="Animation" id="Animation_hybbf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_org4s")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8njsq"]
resource_name = "dash_left"
length = 0.2
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [19, 21, 21, 21]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rpmrj")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1.54018e-06, 0.599331, 0.260537, 1), Color(0, 0.6, 0.258824, 1), Color(0, 0.6, 0.258824, 1), Color(0, 0.6, 0.258824, 1)]
}

[sub_resource type="Animation" id="Animation_qlggf"]
resource_name = "dash_right"
length = 0.2
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [27, 29, 29, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rpmrj")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1.54018e-06, 0.599331, 0.260537, 1), Color(0, 0.6, 0.258824, 1), Color(0, 0.6, 0.258824, 1), Color(0, 0.6, 0.258824, 1)]
}

[sub_resource type="Animation" id="Animation_ak2l3"]
resource_name = "run_S_2"
length = 2.5
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_lg7j1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333, 1, 1.04167, 1.08333, 1.125, 1.16667, 1.20833, 1.25, 1.29167, 1.33333, 1.375, 1.41667, 1.45833, 1.5, 1.54167, 1.58333, 1.625, 1.66667, 1.70833, 1.75, 1.79167, 1.83333, 1.875, 1.91667, 1.95833, 2, 2.04167, 2.08333, 2.125, 2.16667, 2.20833, 2.25, 2.29167, 2.33333, 2.375, 2.41667, 2.45833),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59]
}

[sub_resource type="Animation" id="Animation_p53ff"]
resource_name = "idle_left"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_org4s")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fpuc8"]
resource_name = "idle_down"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_org4s")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_j8aet"]
resource_name = "idle_right"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_org4s")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rvjvx"]
resource_name = "idle_up"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_org4s")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3clmv"]
resource_name = "run_left"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rpmrj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cwujl"]
resource_name = "run_up"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rpmrj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.00336375, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_82di3"]
resource_name = "run_right"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rpmrj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2vssb"]
resource_name = "run_down"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rpmrj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ukghb"]
resource_name = "dash_up"
length = 0.2
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 15, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rpmrj")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1.54018e-06, 0.599331, 0.260537, 1), Color(0, 0.6, 0.258824, 1), Color(1.54972e-06, 0.599331, 0.260537, 1), Color(0, 0.6, 0.258824, 1)]
}

[sub_resource type="Animation" id="Animation_3b66i"]
resource_name = "dash_down"
length = 0.200007
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 7, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rpmrj")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1.54018e-06, 0.599331, 0.260537, 1), Color(0, 0.6, 0.258824, 1), Color(0, 0.6, 0.258824, 1), Color(0, 0.6, 0.258824, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sq5m4"]
_data = {
"RESET": SubResource("Animation_hybbf"),
"dash_down": SubResource("Animation_3b66i"),
"dash_left": SubResource("Animation_8njsq"),
"dash_right": SubResource("Animation_qlggf"),
"dash_up": SubResource("Animation_ukghb"),
"idle_down": SubResource("Animation_fpuc8"),
"idle_left": SubResource("Animation_p53ff"),
"idle_right": SubResource("Animation_j8aet"),
"idle_up": SubResource("Animation_rvjvx"),
"run_S_2": SubResource("Animation_ak2l3"),
"run_down": SubResource("Animation_2vssb"),
"run_left": SubResource("Animation_3clmv"),
"run_right": SubResource("Animation_82di3"),
"run_up": SubResource("Animation_cwujl")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("navigation_component", "input_component", "dash_component") groups=["player"]]
z_index = 1
z_as_relative = false
collision_layer = 5
collision_mask = 0
script = ExtResource("1_35xu0")
navigation_component = NodePath("navigation")
input_component = NodePath("input_component")
dash_component = NodePath("dash_component")
SPEED = 650.0
hp = 150

[node name="shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.432)
position = Vector2(0, 17)
scale = Vector2(0.457031, 0.425781)
texture = ExtResource("2_vej8t")

[node name="colision" type="CollisionShape2D" parent="."]
position = Vector2(0, 13)
shape = SubResource("CapsuleShape2D_3yqhx")

[node name="sprite" type="Sprite2D" parent="."]
modulate = Color(1.54972e-06, 0.599331, 0.260537, 1)
position = Vector2(0, -12.25)
scale = Vector2(0.7, 0.8)
texture = ExtResource("3_rpmrj")
hframes = 8
vframes = 4
frame = 14

[node name="sprite2" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -1)
scale = Vector2(0.45, 0.45)
texture = ExtResource("5_7ck1i")
hframes = 8

[node name="anim" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_sq5m4")
}

[node name="cam" type="Camera2D" parent="."]
zoom = Vector2(1.2, 1.2)
limit_left = -100
limit_top = -450
limit_right = 2600
limit_bottom = 1300
rotation_smoothing_enabled = true
script = ExtResource("8_hwydy")

[node name="light" type="PointLight2D" parent="."]
visible = false
show_behind_parent = true
color = Color(1, 0.851068, 0.663208, 1)
texture = ExtResource("8_07x4o")
texture_scale = 2.77

[node name="navigation" parent="." node_paths=PackedStringArray("node") instance=ExtResource("4_st6it")]
debug_enabled = false
node = NodePath("..")

[node name="input_component" parent="." node_paths=PackedStringArray("navigation_component", "dash_component", "skill_component", "cam", "node", "skill_mananager") instance=ExtResource("5_vq3vh")]
navigation_component = NodePath("../navigation")
dash_component = NodePath("../dash_component")
skill_component = NodePath("../star_court")
cam = NodePath("../cam")
node = NodePath("..")
skill_mananager = NodePath("../SkillManager")

[node name="dash_component" parent="." node_paths=PackedStringArray("node", "navigation_component", "node_texture") instance=ExtResource("8_f5wbr")]
node = NodePath("..")
navigation_component = NodePath("../navigation")
dash_speed = 1200.0
ghost_effect = ExtResource("9_66ca6")
node_texture = NodePath("../sprite")

[node name="hud_player" parent="." node_paths=PackedStringArray("node") instance=ExtResource("9_5hble")]
offset_top = 35.0
offset_bottom = 35.0
node = NodePath("..")

[node name="name" parent="hud_player" index="0"]
offset_left = -13.0
offset_top = -111.0
offset_right = 35.0
offset_bottom = -88.0
text = "mikoto"

[node name="hp_bar" parent="hud_player" index="1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -105.0
offset_right = 51.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50.0001, 21.6667)

[node name="level" parent="hud_player" index="2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -99.0
offset_right = -22.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2

[node name="star_court" parent="." node_paths=PackedStringArray("player", "navigation_component") instance=ExtResource("17_mvh31")]
player = NodePath("..")
navigation_component = NodePath("../navigation")

[node name="SkillManager" parent="." instance=ExtResource("17_nxdyt")]

[node name="basic_attack" type="Node2D" parent="."]
script = ExtResource("17_wwwbr")
Projectile = ExtResource("18_myu4g")
basic_dmg = 2400
attack_speed = 0.5
attack_range = 350.0

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="DirectionTracker" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("19_6k20i")
player = NodePath("..")

[node name="StateMachineManager" type="Node" parent="."]
script = ExtResource("20_rpnuu")

[node name="State" type="Node" parent="." node_paths=PackedStringArray("manager")]
script = ExtResource("21_xtvo4")
manager = NodePath("../StateMachineManager")

[node name="IdleState" type="Node" parent="State" node_paths=PackedStringArray("player", "direction_tracker", "animation", "manager", "dash_component")]
script = ExtResource("22_ejng3")
player = NodePath("../..")
direction_tracker = NodePath("../../DirectionTracker")
animation = NodePath("../../anim")
manager = NodePath("../../StateMachineManager")
dash_component = NodePath("../../dash_component")

[node name="RunState" type="Node" parent="State" node_paths=PackedStringArray("player", "direction_tracker", "animation", "manager", "dash_component")]
script = ExtResource("23_ffcry")
player = NodePath("../..")
direction_tracker = NodePath("../../DirectionTracker")
animation = NodePath("../../anim")
manager = NodePath("../../StateMachineManager")
dash_component = NodePath("../../dash_component")

[node name="DashState" type="Node" parent="State" node_paths=PackedStringArray("player", "direction_tracker", "animation", "manager", "dash_component")]
script = ExtResource("24_yj4fb")
player = NodePath("../..")
direction_tracker = NodePath("../../DirectionTracker")
animation = NodePath("../../anim")
manager = NodePath("../../StateMachineManager")
dash_component = NodePath("../../dash_component")

[connection signal="destination_reached" from="navigation" to="." method="_on_destination_reached"]

[editable path="hud_player"]
